--- a/.github/workflows/hugo_gh.yml
+++ b/.github/workflows/hugo_gh.yml
@@ -46,8 +46,8 @@ jobs:
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          ref: cozyan.github.io
+        # with:
+        #   ref: cozyan.github.io
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
