--- a/config.yaml
+++ b/config.yaml
@@ -22,6 +22,17 @@ languages:
       category: categories
       tag: tags
       series: series
+    params:
+      homeInfoParams:
+        Title: "Cozyan's Canvas"
+        Content: >
+          Hi! 👋 I'm Cozyan, just a regular person navigating the ups and downs of tech 🖥️, 
+          
+          life's rollercoasters, and the ever-twisting world of finance.
+          
+          At Cozyan's Canvas 🎨, I share my stories and discoveries, 
+          
+          all served with a dash of humor and a slice of beef 🥩 for relatability 😊.
     menu:
       main:
         - name: About
@@ -46,6 +57,19 @@ languages:
       category: CNcategories
       tag: CNtags
       series: CNseries
+    params:
+      homeInfoParams:
+        Title: "Cozyan's Canvas"
+        Content: >
+          嗨嗨大家！👋 
+
+          我是Cozyan，一个普通人，一边在技术的深坑里摸爬滚打 🖥️，一边坐着生活的过山车 🎢，
+
+          还顺便瞄一眼金融世界的花花绿绿 💰。
+
+          我会分享我的日常碎碎念和各种奇怪发现，轻松带点沙雕风，还会塞点“硬核干货” 🥩，
+
+          希望能让你看着开心又觉得有点用！快来玩吧～😊
     menu:
       main:
         - name: 关于我
@@ -103,16 +127,6 @@ params:
   #     - name: Tags
   #       url: tags
 
-  homeInfoParams:
-    Title: "Cozyan's Canvas"
-    Content: >
-      Hi! 👋 I'm Cozyan, just a regular person navigating the ups and downs of tech 🖥️, 
-      
-      life's rollercoasters, and the ever-twisting world of finance.
-      
-      At Cozyan's Canvas 🎨, I share my stories and discoveries, 
-      
-      all served with a dash of humor and a slice of beef 🥩 for relatability 😊.
 
   socialIcons:
     - name: github
@@ -124,6 +138,12 @@ params:
     - name: X
       title: Share PaperMod on X/Twitter
       url: "https://x.com/intent/tweet/?text=Checkout%20Hugo%20PaperMod%20%E2%9C%A8%0AA%20fast,%20clean,%20responsive%20Hugo%20theme.&url=https://github.com/adityatelange/hugo-PaperMod&hashtags=Hugo,PaperMod"
+    - name: LinkedIn
+      title: Message me on LinkedIn
+      url: "https://www.linkedin.com/in/gemma-liang/"
+    - name: medium
+      title: Read my articles on Medium
+      url: "https://medium.com/@cozyan"
     - name: KoFi
       title: Buy me a Ko-Fi :)
       url: "https://ko-fi.com/cozyan"
