update github action to main branch

--- a/.github/workflows/hugo_gh.yml
+++ b/.github/workflows/hugo_gh.yml
@@ -63,7 +63,7 @@ jobs:
           path: ./public
   # Deployment job
   deploy:
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
