--- a/config.yaml
+++ b/config.yaml
@@ -186,10 +186,9 @@ params:
 
   gitalk:
     owner: "cozyan"
-    repo: "blog-gitalk"
+    repo: "site-comment-git"
     clientId: "Ov23lims4tKqXdOWGaWV"
     clientSecret: "6828096289e2edc86d49444bad1819cb1e157b6e"
-    labels: ["gitalk"]
 
 services:
   instagram:
