--- a/config.yaml
+++ b/config.yaml
@@ -160,7 +160,8 @@ params:
 
   analytics:
       google:
-          SiteVerificationTag: "XYZabc"
+        id: G-W02F5BM27Q
+        SiteVerificationTag: "EZkQ2kjveTiffXyslGKsoz1pnbIR7DTAhatwUQ_kTWo"
 
   assets:
     disableHLJS: true
