--- a/config.yaml
+++ b/config.yaml
@@ -59,7 +59,7 @@ languages:
       homeInfoParams:
         Title: "Yan's Canvas"
         Content: |
-          Hi! 👋 我是一名一名常驻荷兰的数据工程师。
+          Hi! 👋 我是一名常驻荷兰的数据工程师。
 
           欢迎来到我的博客——这不仅是一个技术分享的平台，更是我个人思考和生活感悟的集散地。
           
