--- a/.github/workflows/hugo_gh.yml
+++ b/.github/workflows/hugo_gh.yml
@@ -57,6 +57,7 @@ jobs:
           hugo \
             --buildDrafts --gc \
             --baseURL ${{ steps.pages.outputs.base_url }}
+          ls -la ./public  # Verify output directory exists and has content
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -72,4 +73,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v3
